# localx-llama

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/localx-eval-core/: Cargo.toml
crates/localx-eval-core/src/: ablation.rs  check.rs  discipline.rs  gate.rs  grade.rs  judge.rs  lib.rs  scorecard.rs  verify.rs
crates/localx-llama-core/: Cargo.toml
crates/localx-llama-core/src/: args.rs  config.rs  error.rs  launcher.rs  lib.rs  model.rs  quant.rs  tuner.rs  vram.rs
crates/localx-llama-core/tests/fixtures/: best-q3635ba3b.json
crates/localx-llama-runtime/: Cargo.toml
crates/localx-llama-runtime/src/: download.rs  error.rs  health.rs  lib.rs  net.rs  nothink.rs  probe.rs  proxy.rs  server.rs  spawn.rs
