# localx-llama — shared Rust crate tier for the LocalX stack.
#
# Home of the primitives reused by LocalBox, LocalBench, and LocalPilot:
#   - localx-llama-core     pure domain (ModelDef, argv builder, VRAM/fit, config, tuner schema)
#   - localx-llama-runtime  process/network side (server lifecycle, download, embed, no-think filter)
#   - localx-eval-core      extracted eval primitives (scorecard/judge/ablation, grader)
#
# Consumed by the product repos via a rev-pinned Cargo git dependency (not a
# submodule). MSRV 1.82 / edition 2021, exact-pinned deps — matches the stack.

[workspace]
resolver = "2"
members = [
    "crates/localx-llama-core",
    "crates/localx-llama-runtime",
    "crates/localx-eval-core",
]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["David <David@c0degeek.dev>", "Bram (C0deGeek.dev)"]
repository = "https://github.com/C0deGeek-dev/localx-llama"
rust-version = "1.82"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"

# Exact-pinned, MSRV-1.82-verified. The proxy set (axum/hyper/hyper-util/
# http-body-util/tower/bytes/futures) was spike-built + run on 1.82 before pinning
# (see plan subject 00.5). The rest mirror LocalPilot's vetted pins.
[workspace.dependencies]
# core / serde
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
thiserror = "=2.0.9"
toml = "=0.8.23"
anyhow = "=1.0.95"
regex = "=1.11.3"
sha2 = "=0.10.8"
# async / http (in-process no-think proxy + endpoint probes)
tokio = { version = "=1.44.2", features = ["macros", "rt-multi-thread", "process", "signal", "fs", "io-util", "io-std", "time", "sync", "net"] }
axum = "=0.7.9"
hyper = { version = "=1.10.1", features = ["client", "server", "http1"] }
hyper-util = { version = "=0.1.20", features = ["client", "client-legacy", "http1", "tokio"] }
http = "=1.4.2"
http-body-util = "=0.1.3"
tower = "=0.5.3"
bytes = "=1.12.0"
futures = "=0.3.31"
reqwest = { version = "=0.12.11", features = ["json", "stream", "rustls-tls"], default-features = false }
# platform / fs
dunce = "=1.0.5"
dirs = "=5.0.1"
sysinfo = "=0.32.1"
# schema
schemars = "=0.8.21"
# dev
insta = "=1.47.2"
tempfile = "=3.14.0"
